2014-07-28  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c (do_pic_file): Don't insert the pic file while skimming
	reflected segments.

2014-07-28  Jiang Jiang  <gzjjgod@gmail.com>

	* cid.c, pdfdev.c: Correct release of retained cff_charsets.

2014-07-27  Jiang Jiang  <gzjjgod@gmail.com>

	* cff.c, cff.h, cid.c, cid_p.h, cidtype0.c, fontmap.c, fontmap.h,
	pdfdev.c: Fix CID-keyed fonts glyph lookup with XeTeX.

	* pdfdev.c, pdffont.c, pdffont.h, tt_cmap.c, type0.c, type0.h: Fix
	reverse CMap lookup for ToUnicode map generation.

	* cff.c: Avoid read past 65536 glyphs.

2014-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dpxfile.c: Add a default case to avoid compiler warnings.

2014-07-25  Khaled Hosny  <khaledhosny@eglug.org>

	* dpxfile.c, dpxfile.h: Use an enum for resource type instead of
	preprocessor macros (easier to view in a debugger).

	* dvi.c, vf.c: Remove unnecessary is_xetex checks; there is no reason
	not to support SET3 and PUT3 in xdvipdfmx (XeTeX does not use them
	anyway).

2014-07-24  Khaled Hosny  <khaledhosny@eglug.org>

	* cff.c. cff.h, cid.c, cid.h, cid_p.h, cidtype0.c, cidtype2.c,
	pdffont.c, pdffont.h, sfnt.c, sfnt.h, t1_load.c, truetype.c, tt_aux.c,
	tt_cmap.c, tt_cmap.h, tt_glyf.c, tt_gsub.c, tt_post.c, tt_post.h,
	tt_table.c, type0.c, type1c.c: These files are now identical for
	dvipdfmx and xdvipdfmx and are part of libutil.a.
	* type0.h (Type0Font_get_ft_to_gid): Removed.
	* Makefile.am: Adapted.

	* pdfdev.c: Reduced dvipdfmx/xdvipdfmx diffs.

	* dvi.c: Use dvi_is_tracking_boxes when applicable.

2014-07-22  Khaled Hosny  <khaledhosny@eglug.org>

	 * src/dvi.c, src/dvicodes.h: Support DVI-IVD inspired text reflection
	 for XeTeX.
	 * src/vf.c: Adapt

2014-07-22  Karl Berry  <karl@tug.org>

	* Makefile.am (check-libutil-source-list): new target for manual
	checking of #ifdef XETEX list.
	(libutil_a_SOURCES): move type1c.c (containing #ifdef XETEX) from here
	(dvipdfmx_SOURCES): to here.

	* cidtype0,